[gd_scene load_steps=5 format=3 uid="uid://70qp4cuw43e7"]

[ext_resource type="Script" uid="uid://q5444ygud4ae" path="res://ui/main_menu.gd" id="1_t7e0r"]
[ext_resource type="AudioStream" uid="uid://b5y1v4xdcv7f3" path="res://audio/Undone.wav" id="2_0dkrt"]
[ext_resource type="PackedScene" uid="uid://cqq6jdeb50g5x" path="res://ui/settings_menu.tscn" id="2_rmr83"]
[ext_resource type="Texture2D" uid="uid://17jtidxs85nc" path="res://levels/knight entering the dungeon background image.jpg" id="3_rmr83"]

[node name="Main Menu" type="CanvasLayer"]
script = ExtResource("1_t7e0r")

[node name="SettingsMenu" parent="." instance=ExtResource("2_rmr83")]
visible = false

[node name="TitleMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="TitleMenu"]
layout_mode = 0
offset_left = -1007.0
offset_top = -531.0
offset_right = 1088.0
offset_bottom = 641.0
texture = ExtResource("3_rmr83")

[node name="Background" type="ColorRect" parent="TitleMenu"]
layout_mode = 0
offset_left = -1039.0
offset_top = -488.0
offset_right = 1105.0
offset_bottom = 515.0
color = Color(0.662745, 0.596078, 0, 0.247059)

[node name="VBoxContainer" type="VBoxContainer" parent="TitleMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.0
offset_top = -50.5
offset_right = 174.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Start_Button" type="Button" parent="TitleMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Play"

[node name="Settings_Button" type="Button" parent="TitleMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="Quit_Button" type="Button" parent="TitleMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit
"

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_0dkrt")
bus = &"Music"

[connection signal="pressed" from="TitleMenu/VBoxContainer/Start_Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="TitleMenu/VBoxContainer/Settings_Button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="TitleMenu/VBoxContainer/Quit_Button" to="." method="_on_quit_button_pressed"]
[connection signal="finished" from="MainMenuMusic" to="." method="_on_main_menu_music_finished"]
